<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/myDrawerLayout">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                app:popupTheme = "@style/ThemeOverlay.AppCompat.Light"/>
        </com.google.android.material.appbar.AppBarLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TableLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow>
                        <Button
                            android:id="@+id/bt_constraintLayout"
                            android:text = "@string/toConstraintLayout"/>
                        <Button
                            android:id="@+id/bt_frameLayout"
                            android:text="@string/toFrameLayout"/>
                        <Button
                            android:id="@+id/bt_tableLayout"
                            android:text="@string/toTableLayout"/>
                        <Button
                            android:id="@+id/bt_linearLayout"
                            android:text="@string/toLinearLayout"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/bt_differentButton"
                            android:text="@string/toButtons"/>
                        <Button
                            android:id="@+id/bt_textView"
                            android:text= "@string/toTextView"/>
                        <Button
                            android:id="@+id/bt_toast"
                            android:text="@string/toast"/>
                        <Button
                            android:id="@+id/bt_scrollView"
                            android:text="@string/scrollView"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:text="ac1"
                            android:onClick="ac1OnClick"/>
                        <Button
                            android:text="ac2"
                            android:onClick="ac2OnClick"/>
                        <Button
                            android:text="ac3"
                            android:onClick="ac3OnClick"/>
                        <Button
                            android:text="ac4"
                            android:onClick="ac4OnClick"/>
                        <Button
                            android:text="ac5"
                            android:onClick="ac5OnClick"/>

                    </TableRow>
                </TableLayout>
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TableRow>
                        <Button
                            android:id="@+id/bt_simpleDialog"
                            android:text="@string/simpleDialog"/>
                        <Button
                            android:id="@+id/bt_viewDialog"
                            android:text="@string/viewDialog"/>
                        <Button
                            android:id="@+id/popup"
                            android:text="弹窗"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/toConfiguration"
                            android:text="@string/configurationChanged"/>
                    </TableRow>
                    <TableRow>
                        <EditText
                            android:id="@+id/username"
                            android:hint="@string/username"/>
                        <EditText
                            android:id="@+id/password"
                            android:hint="@string/password"
                            android:inputType="textPassword"/>
                        <Button
                            android:id="@+id/register"
                            android:text="注册"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/getGender"
                            android:text="@string/gender"
                            android:clickable="true"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:id="@+id/toRecyclerView"
                            android:text="recyclerview"/>
                        <EditText
                            android:textColor="@drawable/statedrawable"
                            android:hint="@string/highLight"/>
                    </TableRow>
                    <TableRow>
                        <Button
                            android:background="@drawable/framebutton"
                            android:text="带边框按钮"/>
                        <Button
                            android:background="@drawable/ovalbutton"
                            android:text="椭圆按钮"/>
                        <Button
                            android:background="@drawable/radiusbutton"
                            android:text="圆角按钮"/>
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:id="@+id/animationImage"
                            android:src="@drawable/ic_launcher_background" />

                        <Button
                            android:id="@+id/animationButton"
                            android:layout_marginRight="0dp"
                            android:text="开始动画" />

                        <TextView
                            android:id="@+id/toDrawerLayout"
                            android:clickable="true"
                            android:text="侧边栏 " />
                    </TableRow>

                    <TableRow>
                        <Button
                            android:id="@+id/toRelativeLayout"
                            android:text="RelativeLayout"/>
                        <Button
                            android:id="@+id/toListView"
                            android:text="listview"/>
                        <Button
                            android:id="@+id/countries"
                            android:text="国家适应"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/toSharedPreferences"
                            android:background="@drawable/framebutton"
                            android:text= "共享内存"
                            android:clickable="true"/>
                        <TextView
                            android:id="@+id/toSD"
                            android:background="@drawable/framebutton"
                            android:text="SD卡读写"
                            android:clickable="true"/>
                        <TextView
                            android:id="@+id/toPaint"
                            android:background="@drawable/framebutton"
                            android:clickable="true"
                            android:text="绘图demo"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/toGesture"
                            android:background="@drawable/radiusbutton"
                            android:text="手势识别"
                            android:clickable="true"/>
                        <TextView
                            android:id="@+id/toFragment"
                            android:background="@drawable/ovalbutton"
                            android:text="Fragment"
                            android:clickable="true"/>
                        <TextView
                            android:id="@+id/toJSON"
                            android:background="@drawable/framebutton"
                            android:clickable="true"
                            android:text="JSON解析"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/toProgressBar"
                            android:background="@drawable/framebutton"
                            android:text="进度条"
                            android:clickable="true"/>
                        <TextView
                            android:id="@+id/broadcast"
                            android:text="广播监听"
                            android:clickable="true"/>
                        <TextView
                            android:id="@+id/callPhone"
                            android:text="拨打电话"
                            android:clickable="true"/>
                    </TableRow>
                    <TableRow>
                        <TextView
                            android:id="@+id/normalNotification"
                            android:text="普通通知"
                            android:clickable="true"
                            android:background="@drawable/framebutton"/>
                        <TextView
                            android:id="@+id/largeNotification"
                            android:text="下拉通知"
                            android:clickable="true"
                            android:background="@drawable/framebutton"/>
                        <TextView
                            android:id="@+id/floatNotification"
                            android:text="悬浮通知"
                            android:clickable="true"
                            android:background="@drawable/framebutton"/>

                    </TableRow>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/message"/>
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/messageone"/>
                </TableLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

   <LinearLayout
       android:layout_width="300dp"
       android:layout_height="match_parent"
       android:layout_gravity="start">
       <Button
           android:id="@+id/toMusic"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="多媒体音乐播放"/>
       <Button
           android:id="@+id/toVideo"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="多媒体视频播放"/>

   </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>
